2003-04-15  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_get_diagnostics): Flush the
	diagnostics stream and append a nul-byte. This allows us to return
	a const char * which will allow us to avoid strdup/free later.
	(gpg_ctx_free): Unref the diagnostics stream.
	(gpg_ctx_new): Get the locale charset and setup a charset filter
	for the diagnostics stream (use a stream instead of a GByteArray
	like we did before so we can do charset conversion more easily).
	(gpg_ctx_op_step): Use g_mime_stream_write() to append data to the
	diagnostics buffer instead of g_byte_array_append() - this way we
	get some charset filtering action. When reporting errors, use
	gpg_ctx_get_diagnostics(). Also make the errors reported to the
	user a little nicer.
	(gpg_sign): Diagnostics is now const, so don't free the result.
	(gpg_verify): Same. But also don't exit the main loop when gpg
	exits - there could still be data in the pipes left to read.
	(gpg_encrypt): Same as gpg_sign().
	(gpg_decrypt): Same here.
	(gpg_import_keys): Here too.
	(gpg_export_keys): And here.
	(gpg_ctx_parse_status): Convert the userid hint to UTF-8.

2003-03-31  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/*.c: s/g_str[n]casecmp/str[n]casecmp/g

	* configure.in: Change the check for mmap so that we know we not
	only have mmap defined, but also that it "works". Also added
	checks for strcasecmp and strncasecmp and define them to the glib
	versions if appropriate (g_ascii_str[n]casecmp since
	g_str[n]casecmp is apparently deprecated *sigh*). Doing this
	because I don't want to type g_ascii_str[n]casecmp. Call me a lazy
	bastard, but this is rediculous.

	* gmime/gmime-filter-enriched.[c,h]: New source files that can be
	used to convert text/enriched and text/rtf to text/html.

2003-03-31  Jeffrey Stedfast  <fejj@ximian.com>

	* PORTING: Began writing a porting guide for developers porting
	their applications from GMime 2.0 to GMime 2.2.
